--- a/functions.ipynb
+++ b/functions.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -227,14 +227,14 @@
     "# which we call `n` and then returns the sum of `n` and 2\n",
     "\n",
     "add_two <- function(n) {\n",
-    "    x <- n + 2\n",
-    "    return(x)\n",
+    "    z <- n + 2\n",
+    "    return(z)\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -245,12 +245,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1] 52\n"
+      "[1] 5023\n"
      ]
     }
    ],
    "source": [
-    "b <- 50\n",
+    "bar <- 5021\n",
     "\n",
     "a <- add_two(b)             # call our newly created function\n",
     "\n",
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -306,14 +306,13 @@
     "area_of_square <- function(len, wd) {\n",
     "    \n",
     "    area <- len * wd\n",
-    "    \n",
     "    return(area)\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -345,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -353,29 +352,57 @@
    },
    "outputs": [
     {
-     "ename": "ERROR",
-     "evalue": "Error in eval(expr, envir, enclos): object 'area' not found\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in eval(expr, envir, enclos): object 'area' not found\nTraceback:\n"
-     ]
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>'a'</li><li>'add_two'</li><li>'area_of_square'</li><li>'b'</li><li>'bar'</li><li>'u'</li><li>'v'</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 'a'\n",
+       "\\item 'add\\_two'\n",
+       "\\item 'area\\_of\\_square'\n",
+       "\\item 'b'\n",
+       "\\item 'bar'\n",
+       "\\item 'u'\n",
+       "\\item 'v'\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 'a'\n",
+       "2. 'add_two'\n",
+       "3. 'area_of_square'\n",
+       "4. 'b'\n",
+       "5. 'bar'\n",
+       "6. 'u'\n",
+       "7. 'v'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] \"a\"              \"add_two\"        \"area_of_square\" \"b\"             \n",
+       "[5] \"bar\"            \"u\"              \"v\"             "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "area                         # error"
+    "ls()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "ls()                         # list elements in current \"scope\""
+    " "
    ]
   }
  ],
