--- a/numeric_and_string_vars.ipynb
+++ b/numeric_and_string_vars.ipynb
@@ -26,39 +26,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "20"
+      ],
+      "text/latex": [
+       "20"
+      ],
+      "text/markdown": [
+       "20"
+      ],
+      "text/plain": [
+       "[1] 20"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "13 + 7"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "713"
+      ],
+      "text/latex": [
+       "713"
+      ],
+      "text/markdown": [
+       "713"
+      ],
+      "text/plain": [
+       "[1] 713"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "13 + 7 * 100         # R knows about order of operations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "2000"
+      ],
+      "text/latex": [
+       "2000"
+      ],
+      "text/markdown": [
+       "2000"
+      ],
+      "text/plain": [
+       "[1] 2000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "(13 + 7) * 100       # Can also use parentheses"
    ]
@@ -76,39 +133,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "9.938375"
+      ],
+      "text/latex": [
+       "9.938375"
+      ],
+      "text/markdown": [
+       "9.938375"
+      ],
+      "text/plain": [
+       "[1] 9.938375"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "2.15^3                # taking cube of a float"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "27.374650211806"
+      ],
+      "text/latex": [
+       "27.374650211806"
+      ],
+      "text/markdown": [
+       "27.374650211806"
+      ],
+      "text/plain": [
+       "[1] 27.37465"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "86/pi                 # R knows about Pi "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "16331239353195370"
+      ],
+      "text/latex": [
+       "16331239353195370"
+      ],
+      "text/markdown": [
+       "16331239353195370"
+      ],
+      "text/plain": [
+       "[1] 1.633124e+16"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "tan(pi/2)            # R knows about trig, too"
    ]
@@ -126,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -139,33 +253,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 20\n"
+     ]
+    }
+   ],
    "source": [
     "print(a)            # Now `a` stores value of `13 + 7` expression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "25"
+      ],
+      "text/latex": [
+       "25"
+      ],
+      "text/markdown": [
+       "25"
+      ],
+      "text/plain": [
+       "[1] 25"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "5 + a               # We can continue to use `a` in subsequent code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -189,13 +330,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 17\n"
+     ]
+    }
+   ],
    "source": [
     "a <- 17\n",
     "\n",
@@ -204,13 +353,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 42\n"
+     ]
+    }
+   ],
    "source": [
     "a <- a + 1\n",
     "\n",
@@ -219,13 +376,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 26\n"
+     ]
+    }
+   ],
    "source": [
     "b <- 23\n",
     "\n",
@@ -249,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -257,25 +422,33 @@
    },
    "outputs": [],
    "source": [
-    "name <- \"paul\""
+    "name <- \"paul\"  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"paul\"\n"
+     ]
+    }
+   ],
    "source": [
     "print(name)                         # print value of `name`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -288,26 +461,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"paul stey\"\n"
+     ]
+    }
+   ],
    "source": [
     "print(full_name)                "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"paul\"\n"
+     ]
+    }
+   ],
    "source": [
     "print(name)                         # `name` variable is still the same"
    ]
@@ -325,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -338,20 +527,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "11"
+      ],
+      "text/latex": [
+       "11"
+      ],
+      "text/markdown": [
+       "11"
+      ],
+      "text/plain": [
+       "[1] 11"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "nchar(fruit_string)               # count characters in string"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -364,13 +572,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"MANGO PEACH\"\n"
+     ]
+    }
+   ],
    "source": [
     "print(upper_fruit)               # original variable is unchanged"
    ]
