--- a/container_types.ipynb
+++ b/container_types.ipynb
@@ -46,28 +46,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1]  42 137  34\n"
+     ]
+    }
+   ],
    "source": [
-    "my_vec <- c(42, 137, 3)             # use c() function to combine elements in to vector\n",
+    "my_vec <- c(42, 137, 34)             # use c() function to combine elements in to vector\n",
     "\n",
     "print(my_vec)                       # Note: all elements are of type integer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"dog\"    \"cat\"    \"bird\"   \"potato\"\n"
+     ]
+    }
+   ],
    "source": [
     "animal_vec <- c(\"dog\", \"cat\", \"bird\", \"potato\")\n",
     "\n",
@@ -90,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -103,15 +119,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>'jon'</li><li>'robb'</li><li>'arya'</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 'jon'\n",
+       "\\item 'robb'\n",
+       "\\item 'arya'\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 'jon'\n",
+       "2. 'robb'\n",
+       "3. 'arya'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] \"jon\"  \"robb\" \"arya\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "people[3]                  # use [] notation to access element"
+    "people[1]                  # use [] notation to access element"
    ]
   },
   {
@@ -130,17 +178,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"ned\"  \"jon\"  \"robb\" \"arya\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>'ned'</li><li>'jon'</li><li>'robb'</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 'ned'\n",
+       "\\item 'jon'\n",
+       "\\item 'robb'\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 'ned'\n",
+       "2. 'jon'\n",
+       "3. 'robb'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] \"ned\"  \"jon\"  \"robb\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "print(people)                 # Use vector from previous example\n",
     "\n",
-    "people[3:4]                   # use range notation to get \"slice\""
+    "people[1:3]                   # use range notation to get \"slice\""
    ]
   },
   {
@@ -159,13 +246,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>'ned'</li><li>'arya'</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 'ned'\n",
+       "\\item 'arya'\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 'ned'\n",
+       "2. 'arya'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] \"ned\"  \"arya\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "vec_idx <- c(1, 4)\n",
     "\n",
@@ -174,13 +291,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>'ned'</li><li>'robb'</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 'ned'\n",
+       "\\item 'robb'\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 'ned'\n",
+       "2. 'robb'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] \"ned\"  \"robb\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "people[c(1, 3)]"
    ]
@@ -200,26 +347,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"ned\"  \"jon\"  \"robb\" \"arya\"\n"
+     ]
+    }
+   ],
    "source": [
     "print(people) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>'ned'</li><li>'robb'</li><li>'arya'</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 'ned'\n",
+       "\\item 'robb'\n",
+       "\\item 'arya'\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 'ned'\n",
+       "2. 'robb'\n",
+       "3. 'arya'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] \"ned\"  \"robb\" \"arya\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "is_stark <- c(TRUE, FALSE, TRUE, TRUE)\n",
     "\n",
@@ -241,13 +428,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"dog\"    \"cat\"    \"bird\"   \"potato\"\n"
+     ]
+    }
+   ],
    "source": [
     "animal_vec <- c(\"dog\", \"cat\", \"bird\", \"potato\")\n",
     "\n",
@@ -256,17 +451,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"dog\"  \"cat\"  \"bird\" \"fish\"\n"
+     ]
+    }
+   ],
    "source": [
-    "animal_vec[2:4] <- \"fish\"          # replace 4th elements\n",
+    "animal_vec[4] <- \"fish\"          # this is a note to my future self\n",
     " \n",
-    "print(animal_vec)                # potato is not an animal"
+    "print(animal_vec)                # potato is an animal"
    ]
   },
   {
@@ -285,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -300,13 +503,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     [,1] [,2] [,3] [,4]\n",
+      "[1,]    1    4    7   10\n",
+      "[2,]    2    5    8   11\n",
+      "[3,]    3    6    9   12\n"
+     ]
+    }
+   ],
    "source": [
     "print(m)"
    ]
@@ -327,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -342,13 +556,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     [,1]  [,2]  \n",
+      "[1,] \"lee\" \"bill\"\n",
+      "[2,] \"sue\" \"don\" \n"
+     ]
+    }
+   ],
    "source": [
     "print(name_mat)"
    ]
@@ -368,13 +592,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           [,1]       [,2]\n",
+      "[1,] 0.01689109 -1.3767263\n",
+      "[2,] 0.78709777 -0.9585521\n",
+      "[3,] 0.91263068  1.6350832\n",
+      "[4,] 0.70633089 -1.5212946\n"
+     ]
+    }
+   ],
    "source": [
     "x <- matrix(rnorm(8), nrow = 4)\n",
     "\n",
@@ -383,26 +619,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "-1.37672627390181"
+      ],
+      "text/latex": [
+       "-1.37672627390181"
+      ],
+      "text/markdown": [
+       "-1.37672627390181"
+      ],
+      "text/plain": [
+       "[1] -1.376726"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "x[1, 2]                       # element in first row, second column"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "1.63508319431703"
+      ],
+      "text/latex": [
+       "1.63508319431703"
+      ],
+      "text/markdown": [
+       "1.63508319431703"
+      ],
+      "text/plain": [
+       "[1] 1.635083"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "x[3, 2]                       # third row, second column"
    ]
@@ -422,13 +696,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     [,1] [,2] [,3]\n",
+      "[1,]    1    5    9\n",
+      "[2,]    2    6   10\n",
+      "[3,]    3    7   11\n",
+      "[4,]    4    8   12\n"
+     ]
+    }
+   ],
    "source": [
     "w <- matrix(1:12, nrow = 4)\n",
     "\n",
@@ -437,26 +723,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>2</li><li>6</li><li>10</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 2\n",
+       "\\item 6\n",
+       "\\item 10\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 2\n",
+       "2. 6\n",
+       "3. 10\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1]  2  6 10"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "w[2, ]                        # get second row"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>1</li><li>2</li><li>3</li><li>4</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 1\n",
+       "\\item 2\n",
+       "\\item 3\n",
+       "\\item 4\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 1\n",
+       "2. 2\n",
+       "3. 3\n",
+       "4. 4\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 1 2 3 4"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "w[, 1]                        # get first column"
    ]
@@ -474,13 +826,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>10</li><li>12</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 10\n",
+       "\\item 12\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 10\n",
+       "2. 12\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 10 12"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "row_idx <- c(2, 4)\n",
     "col_idx <- 3\n",
