--- a/more_container_types.ipynb
+++ b/more_container_types.ipynb
@@ -44,13 +44,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "2"
+      ],
+      "text/latex": [
+       "2"
+      ],
+      "text/markdown": [
+       "2"
+      ],
+      "text/plain": [
+       "[1] 2"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "v <- c(4, 2, 111)        # create vector with 3 integers\n",
     "\n",
@@ -59,13 +78,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1]     4     2 99999\n"
+     ]
+    }
+   ],
    "source": [
     "v[3] <- 99999            # modify 3rd element in vector\n",
     "\n",
@@ -85,13 +112,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           [,1]       [,2]\n",
+      "[1,] -0.6812241 -0.2835144\n",
+      "[2,]  0.6637581  0.9800956\n",
+      "[3,] -0.5004473 -0.9702481\n"
+     ]
+    }
+   ],
    "source": [
     "m <- matrix(rnorm(6), nrow = 3)\n",
     "\n",
@@ -100,13 +138,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "-0.970248081977782"
+      ],
+      "text/latex": [
+       "-0.970248081977782"
+      ],
+      "text/markdown": [
+       "-0.970248081977782"
+      ],
+      "text/plain": [
+       "[1] -0.9702481"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "m[3, 2]"
    ]
@@ -124,39 +181,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           [,1]       [,2]\n",
+      "[1,] -0.6812241 -0.2835144\n",
+      "[2,]  0.6637581  0.9800956\n",
+      "[3,] -0.5004473 -0.9702481\n"
+     ]
+    }
+   ],
    "source": [
     "print(m)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>-0.283514448775723</li><li>0.980095609038422</li><li>-0.970248081977782</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item -0.283514448775723\n",
+       "\\item 0.980095609038422\n",
+       "\\item -0.970248081977782\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. -0.283514448775723\n",
+       "2. 0.980095609038422\n",
+       "3. -0.970248081977782\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] -0.2835144  0.9800956 -0.9702481"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "m[, 2]                   # get second column"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            [,1]        [,2]\n",
+      "[1,]  -0.6812241  -0.2835144\n",
+      "[2,]   0.6637581   0.9800956\n",
+      "[3,] 999.0000000 999.0000000\n"
+     ]
+    }
+   ],
    "source": [
     "m[3, ] <- 999            # replace 3rd row elements with 999\n",
     "\n",
@@ -178,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -193,13 +304,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ", , 1\n",
+      "\n",
+      "     [,1] [,2] [,3] [,4]\n",
+      "[1,]    1    4    7   10\n",
+      "[2,]    2    5    8   11\n",
+      "[3,]    3    6    9   12\n",
+      "\n",
+      ", , 2\n",
+      "\n",
+      "     [,1] [,2] [,3] [,4]\n",
+      "[1,]   13   16   19   22\n",
+      "[2,]   14   17   20   23\n",
+      "[3,]   15   18   21   24\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(w)"
    ]
@@ -217,26 +349,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "15"
+      ],
+      "text/latex": [
+       "15"
+      ],
+      "text/markdown": [
+       "15"
+      ],
+      "text/plain": [
+       "[1] 15"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "w[3, 1, 2]               # 3rd row, 1st column, 2nd \"layer\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     [,1] [,2] [,3] [,4]\n",
+      "[1,]   13   16   19   22\n",
+      "[2,]   14   17   20   23\n",
+      "[3,]   15   18   21   24\n"
+     ]
+    }
+   ],
    "source": [
     "print(w[, ,2])           # all of second layer"
    ]
@@ -254,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -262,18 +424,39 @@
    },
    "outputs": [],
    "source": [
-    "w[, , 2] <- 999          # set all elements in 2nd layer to 999 "
+    "w[, , 2] <- \"999\"          # set all elements in 2nd layer to 999 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ", , 1\n",
+      "\n",
+      "     [,1] [,2] [,3] [,4]\n",
+      "[1,] \"1\"  \"4\"  \"7\"  \"10\"\n",
+      "[2,] \"2\"  \"5\"  \"8\"  \"11\"\n",
+      "[3,] \"3\"  \"6\"  \"9\"  \"12\"\n",
+      "\n",
+      ", , 2\n",
+      "\n",
+      "     [,1]  [,2]  [,3]  [,4] \n",
+      "[1,] \"999\" \"999\" \"999\" \"999\"\n",
+      "[2,] \"999\" \"999\" \"999\" \"999\"\n",
+      "[3,] \"999\" \"999\" \"999\" \"999\"\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(w)"
    ]
@@ -295,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -308,13 +491,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1]]\n",
+      "[1] 4\n",
+      "\n",
+      "[[2]]\n",
+      "[1] 4.1 3.2 1.4\n",
+      "\n",
+      "[[3]]\n",
+      "[1] \"potato\"\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(d)"
    ]
@@ -335,26 +534,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>4.1</li><li>3.2</li><li>1.4</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 4.1\n",
+       "\\item 3.2\n",
+       "\\item 1.4\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 4.1\n",
+       "2. 3.2\n",
+       "3. 1.4\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 4.1 3.2 1.4"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "d[[2]]                  # get second list elements "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "1.4"
+      ],
+      "text/latex": [
+       "1.4"
+      ],
+      "text/markdown": [
+       "1.4"
+      ],
+      "text/plain": [
+       "[1] 1.4"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "d[[2]][3]               # Get third element from list's 2nd element"
    ]
@@ -372,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -387,15 +637,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<ol>\n",
+       "\t<li>4</li>\n",
+       "\t<li><style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>4.1</li><li>3.2</li><li>1.4</li></ol>\n",
+       "</li>\n",
+       "\t<li>'potato'</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate}\n",
+       "\\item 4\n",
+       "\\item \\begin{enumerate*}\n",
+       "\\item 4.1\n",
+       "\\item 3.2\n",
+       "\\item 1.4\n",
+       "\\end{enumerate*}\n",
+       "\n",
+       "\\item 'potato'\n",
+       "\\end{enumerate}\n"
+      ],
+      "text/markdown": [
+       "1. 4\n",
+       "2. 1. 4.1\n",
+       "2. 3.2\n",
+       "3. 1.4\n",
+       "\n",
+       "\n",
+       "\n",
+       "3. 'potato'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[[1]]\n",
+       "[1] 4\n",
+       "\n",
+       "[[2]]\n",
+       "[1] 4.1 3.2 1.4\n",
+       "\n",
+       "[[3]]\n",
+       "[1] \"potato\"\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "w$egg[[3]]"
+    "w$egg"
    ]
   }
  ],
