--- a/conditional_logic.ipynb
+++ b/conditional_logic.ipynb
@@ -29,13 +29,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"yep!!\"\n",
+      "[1] 555\n"
+     ]
+    }
+   ],
    "source": [
     "if (5 > 4) {\n",
     "    print(\"yep!!\")\n",
@@ -46,13 +55,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"Yes, this is a vector of length 3! Hooray!!\"\n"
+     ]
+    }
+   ],
    "source": [
     "x <- c(\"foo\", \"bar\", \"baz\")\n",
     "\n",
@@ -74,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -100,15 +117,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 171\n"
+     ]
+    }
+   ],
    "source": [
-    "z <- 17\n",
+    "z <- 171\n",
     "\n",
     "if (z > 10 && z %% 2 != 0) {\n",
     "    print(z)\n",
@@ -129,13 +154,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"both are delicious\"\n",
+      " [1] -0.63568802 -0.21427727 -1.74687300 -0.95059822  1.99409538 -0.42082172\n",
+      " [7]  1.64076518  0.03722521  0.74022071  1.30693773\n"
+     ]
+    }
+   ],
    "source": [
     "if (\"potato\" == \"fries\") {\n",
     "    print(\"you will never see this print\")      # this never gets executed\n",
@@ -160,13 +195,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"jefferson\"\n"
+     ]
+    }
+   ],
    "source": [
     "coin_value <- 5\n",
     "\n",
@@ -196,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -217,15 +260,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "TRUE"
+      ],
+      "text/latex": [
+       "TRUE"
+      ],
+      "text/markdown": [
+       "TRUE"
+      ],
+      "text/plain": [
+       "[1] TRUE"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "is_even(12341)                 # use our newly defined function"
+    "is_even(1234)                 # use our newly defined function"
    ]
   },
   {
@@ -243,13 +305,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in n%%2: non-numeric argument to binary operator\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in n%%2: non-numeric argument to binary operator\nTraceback:\n",
+      "1. is_even(\"potato\")"
+     ]
+    }
+   ],
    "source": [
     "is_even(\"potato\")           # is the string \"potato\" even? "
    ]
@@ -268,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -293,13 +365,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "'Are you sure n is numeric?'"
+      ],
+      "text/latex": [
+       "'Are you sure n is numeric?'"
+      ],
+      "text/markdown": [
+       "'Are you sure n is numeric?'"
+      ],
+      "text/plain": [
+       "[1] \"Are you sure n is numeric?\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "is_even(\"potato soup\")"
    ]
